; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_w83627hf.c_show_vid_reg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_w83627hf.c_show_vid_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.w83627hf_data = type { i32, i32 }

@.str = private unnamed_addr constant [5 x i8] c"%ld\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @show_vid_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_vid_reg(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.w83627hf_data*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call %struct.w83627hf_data* @w83627hf_update_device(%struct.device* %8)
  store %struct.w83627hf_data* %9, %struct.w83627hf_data** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load %struct.w83627hf_data*, %struct.w83627hf_data** %7, align 8
  %12 = getelementptr inbounds %struct.w83627hf_data, %struct.w83627hf_data* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.w83627hf_data*, %struct.w83627hf_data** %7, align 8
  %15 = getelementptr inbounds %struct.w83627hf_data, %struct.w83627hf_data* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i64 @vid_from_reg(i32 %13, i32 %16)
  %18 = call i32 @sprintf(i8* %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64 %17)
  ret i32 %18
}

declare dso_local %struct.w83627hf_data* @w83627hf_update_device(%struct.device*) #1

declare dso_local i32 @sprintf(i8*, i8*, i64) #1

declare dso_local i64 @vid_from_reg(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
